<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="sans-serif"
        android:text="@string/choose_language"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/uzbek"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/back_style_next_button"
        android:text="@string/uzbek"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="@font/geometria"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/russian"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/back_style_next_button"
        android:text="@string/russian"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="@font/geometria"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uzbek"
        app:layout_constraintVertical_bias="0" />


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/back_style_next_button"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/geometria"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/russian"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>